# mania

./: .gitignore  .pre-commit-config.yaml  README.md  authentication.py  constants.py  mania.py  pyproject.toml  requirements.txt  setup.py
mania/: __init__.py  bridge.py  constants.py  main.py  mania.py  metadata.py  models.py  tidal.py
mania/providers/: google.py  tidal.py
mania/tidal/: __init__.py
